[tool.poetry]
name = "causal-bandits"
version = "0.1.0"
description = "Test Causal Bandits algorithms from litterature"
authors = ["finnhacks42", "Loïc <baret.loic.1@gmail.com>"]
readme = "README.md"
packages = [
    {include = "causal_bandits"},
    {include = "src", from = "causal_bandits"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.25.2"
scipy = "^1.11.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
